--- a/PFD/WirelessPFD/Base.lproj/Main.storyboard
+++ b/PFD/WirelessPFD/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Prf-n8-kV3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Prf-n8-kV3">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
@@ -303,12 +303,12 @@
                                     </mask>
                                 </variation>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9in-H5-9Xt">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9in-H5-9Xt" customClass="AirspeedScaleView" customModule="WirelessPFD" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ceb-LK-c0y" customClass="LeftScalePointerView" customModule="WirelessPFD" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
-                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        <color key="backgroundColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                                     </view>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="310" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wb2-6Y-uFD">
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
@@ -727,6 +727,7 @@
                         <outlet property="adiContainer" destination="ARf-FK-hGA" id="s6f-jL-V0O"/>
                         <outlet property="adiContainerCenterConstraint" destination="mc5-kw-9ds" id="2mr-3K-aem"/>
                         <outlet property="airspeedLabel" destination="Wb2-6Y-uFD" id="2h5-kc-Jdm"/>
+                        <outlet property="airspeedScale" destination="9in-H5-9Xt" id="3jk-46-iuf"/>
                         <outlet property="altimeterSettingLabel" destination="dV5-c3-vTD" id="2ld-8O-0JY"/>
                         <outlet property="altitudeTrailingDigitsLabel" destination="bm0-Nn-RVx" id="d3b-QA-82E"/>
                         <outlet property="attitudeIndicatorView" destination="GAn-6R-05d" id="scv-TF-VAz"/>
